--- a/labs/lab10/presentation/os2--lab10--presentation.qmd
+++ b/labs/lab10/presentation/os2--lab10--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Лабораторная работа № 10"
+subtitle: "Основы работы с модулями ядра операционной системы"
 license: CC BY
-date: 1970-01-01
+date: 2025-10-08
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,196 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
+## Цель работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+Получить навыки работы с утилитами управления модулями ядра операционной системы.
 
-## Объект и предмет исследования
+## Задание
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+1. Продемонстрируйте навыки работы по управлению модулями ядра (см. раздел 10.4.1).
+2. Продемонстрируйте навыки работы по загрузке модулей ядра с параметрами (см. раздел 10.4.2).
 
-## Цели и задачи
+# Выполнение лабораторной работы
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Управление модулями ядра из командной строки
 
-## Материалы и методы
+## Запустите терминал и получите полномочия администратора:
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+su -
+![1](image/1.png)
 
-# Создание презентации
+## Посмотрите, какие устройства имеются в вашей системе и какие модули ядра с ними
 
-## Процессор `pandoc`
+связаны:
+lspci -k
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+![2](image/2.png)
 
-## Формат `pdf`
+## В отчёте отразите информацию с вашими пояснениями.
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+- lspci -k выводит список всех PCI‑устройств и показывает, какой драйвер ядра (kernel driver) к каждому из них привязан, а также какие альтернативные драйверы (kernel modules) доступны.
+- Host bridge - Идентификатор шины и тип устройства
+- Kernel driver in use - Драйвер, который сейчас управляет этим устройством.
+- Kernel modules - Другие модули, которые могут управлять устройством
+- VGA compatible controller - Графический адаптер
+- Kernel driver in use - Активный драйвер
+- Kernel modules - Возможные драйверы
+  ...
 
-## Код для формата `pdf`
+## Посмотрите, какие модули ядра загружены:
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+lsmod | sort
 
-## Формат `html`
+![3](image/3.png)
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+## Посмотрите, загружен ли модуль ext4:
 
-## Код для формата `html`
+lsmod | grep ext4
 
-- Тема задаётся в файле `Makefile`
+![4](image/4.png)
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+## Загрузите модуль ядра ext4:
 
-## Получающиеся форматы
+modprobe ext4
+Убедитесь, что модуль загружен, посмотрев список загруженных модулей:
+lsmod | grep ext4
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![5](image/5.png)
 
-# Элементы презентации
+## Посмотрите информацию о модуле ядра ext4:
 
-## Актуальность
+modinfo ext4
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+Обратите внимание, что у этого модуля нет параметров.
 
-## Цели и задачи
+![6](image/6.png)
 
-- Не формулируйте более 1--2 целей исследования
+## В отчёте поясните выведенную на экран информацию.
 
-## Материалы и методы
+- `modinfo ext4` выводит метаданные модуля ядра файловой системы ext4.
+- `filename` Путь к объектному файлу модуля
+- `license` Лицензия
+- `description` Краткое описание
+- `author` Автор(ы) разработки
+- `srcversion` Хеш исходного кода, меняется при любой модификации.
+- `depends` Другие модули, от которых зависит ext4
+- `alias` Псевдонимы, позволяющие автозагрузку
+- `parm` Параметры, которые можно задать при загрузке
+- `vermagic` Версия ядра, для которой собран модуль
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+## Попробуйте выгрузить модуль ядра ext4:
 
-## Содержание исследования
+modprobe -r ext4
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+![7](image/7.png)
+Возможно команду потребуется ввести несколько раз.
 
-## Результаты
+## В отчёте отразите, какую информацию выдаёт система.
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+- в первый раз команда вывела, что ext4 используется. Во второй раз все прошло без ошибок
 
+## Попробуйте выгрузить модуль ядра xfs:
 
-## Итоговый слайд
+modprobe -r xfs
+Обратите внимание, что вы получаете сообщение об ошибке, поскольку модуль ядра в данный момент используется.
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+![8](image/8.png)
 
-# Рекомендую
+# Загрузка модулей ядра с параметрами
 
-## Принцип 10/20/30
+## Запустите терминал и получите полномочия администратора.
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+![9](image/9.png)
 
-## Связь слайдов
+## Посмотрите, загружен ли модуль bluetooth:
 
-::: incremental
+lsmod | grep bluetooth
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+![10](image/10.png)
 
-:::
+## Загрузите модуль ядра bluetooth:
 
-## Количество сущностей
+modprobe bluetooth
 
-::: incremental
+![11](image/11.png)
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+## Посмотрите список модулей ядра, отвечающих за работу с Bluetooth:
 
-:::
+lsmod | grep bluetooth
 
-## Общие рекомендации
+![12](image/12.png)
 
-::: incremental
+## Посмотрите информацию о модуле bluetooth:
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+modinfo bluetooth
 
-:::
+![13](image/13.png)
 
-## Представление данных
+## В отчёте поясните, какие параметры могут быть установлены для работы этого модуля.
 
-::: incremental
+- disable_esco
+- disable_ertm
+- enable_ecred
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+## Выгрузите модуль ядра bluetooth:
 
-:::
+modprobe -r bluetooth
+
+![14](image/14.png)
+
+# Обновление ядра системы
+
+## Запустите терминал и получите полномочия администратора:
+
+su -
+
+![15](image/15.png)
+
+## Посмотрите версию ядра, используемую в операционной системе:
+
+uname -r
+
+![16](image/16.png)
+
+## Выведите на экран список пакетов, относящихся к ядру операционной системы:
+
+dnf list kernel
+
+![17](image/17.png)
+
+## Обновите систему, чтобы убедиться, что все существующие пакеты обновлены, так как это важно при установке/обновлении ядер Linux и избежания конфликтов:
+
+dnf upgrade --refresh
+
+![18](image/18.png)
+
+## Обновите ядро операционной системы, а затем саму операционную систему:
+
+dnf update kernel
+dnf update
+dnf upgrade --refresh
+
+![19](image/19.png)
+
+## Перегрузите систему. При загрузке выберите новое ядро.
+
+![20](image/20.png)
+
+## Посмотрите версию ядра, используемую в операционной системы:
+
+uname -r
+hostnamectl
+
+![21](image/21.png)
+
+## Выводы
+
+Я получил навыки работы с утилитами управления модулями ядра операционной системы.
