--- a/labs/lab10/report/os2--lab10--report.qmd
+++ b/labs/lab10/report/os2--lab10--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа № 10"
+subtitle: "Основы работы с модулями ядра операционной системы"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,184 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить навыки работы с утилитами управления модулями ядра операционной системы.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Продемонстрируйте навыки работы по управлению модулями ядра (см. раздел 10.4.1).
+2. Продемонстрируйте навыки работы по загрузке модулей ядра с параметрами (см. раздел 10.4.2).
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Управление модулями ядра из командной строки
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. Запустите терминал и получите полномочия администратора:
+   su -
+   ![1](image/1.png)
+2. Посмотрите, какие устройства имеются в вашей системе и какие модули ядра с ними
+   связаны:
+   lspci -k
+
+   ![2](image/2.png)
+
+   В отчёте отразите информацию с вашими пояснениями.
+
+   - lspci -k выводит список всех PCI‑устройств и показывает, какой драйвер ядра (kernel driver) к каждому из них привязан, а также какие альтернативные драйверы (kernel modules) доступны.
+   - Host bridge - Идентификатор шины и тип устройства
+   - Kernel driver in use - Драйвер, который сейчас управляет этим устройством.
+   - Kernel modules - Другие модули, которые могут управлять устройством
+   - VGA compatible controller - Графический адаптер
+   - Kernel driver in use - Активный драйвер
+   - Kernel modules - Возможные драйверы
+     ...
+
+3. Посмотрите, какие модули ядра загружены:
+   lsmod | sort
+
+   ![3](image/3.png)
+
+4. Посмотрите, загружен ли модуль ext4:
+   lsmod | grep ext4
+
+   ![4](image/4.png)
+
+5. Загрузите модуль ядра ext4:
+   modprobe ext4
+   Убедитесь, что модуль загружен, посмотрев список загруженных модулей:
+   lsmod | grep ext4
+
+   ![5](image/5.png)
+
+6. Посмотрите информацию о модуле ядра ext4:
+   modinfo ext4
+
+   ![6](image/6.png)
+   Обратите внимание, что у этого модуля нет параметров. В отчёте поясните выведенную на экран информацию.
+
+   - `modinfo ext4` выводит метаданные модуля ядра файловой системы ext4.
+   - `filename` Путь к объектному файлу модуля
+   - `license` Лицензия
+   - `description` Краткое описание
+   - `author` Автор(ы) разработки
+   - `srcversion` Хеш исходного кода, меняется при любой модификации.
+   - `depends` Другие модули, от которых зависит ext4
+   - `alias` Псевдонимы, позволяющие автозагрузку
+   - `parm` Параметры, которые можно задать при загрузке
+   - `vermagic` Версия ядра, для которой собран модуль
+
+7. Попробуйте выгрузить модуль ядра ext4:
+   modprobe -r ext4
+
+   ![7](image/7.png)
+   Возможно команду потребуется ввести несколько раз. В отчёте отразите, какую информацию выдаёт система.
+
+   - в первый раз команда вывела, что ext4 используется. Во второй раз все прошло без ошибок
+
+8. Попробуйте выгрузить модуль ядра xfs:
+   modprobe -r xfs
+   Обратите внимание, что вы получаете сообщение об ошибке, поскольку модуль ядра в данный момент используется.
+
+   ![8](image/8.png)
+
+## Загрузка модулей ядра с параметрами
+
+1. Запустите терминал и получите полномочия администратора.
+
+   ![9](image/9.png)
+
+2. Посмотрите, загружен ли модуль bluetooth:
+   lsmod | grep bluetooth
+
+   ![10](image/10.png)
+
+3. Загрузите модуль ядра bluetooth:
+   modprobe bluetooth
+
+   ![11](image/11.png)
+
+4. Посмотрите список модулей ядра, отвечающих за работу с Bluetooth:
+   lsmod | grep bluetooth
+
+   ![12](image/12.png)
+
+5. Посмотрите информацию о модуле bluetooth:
+   modinfo bluetooth
+
+   ![13](image/13.png)
+
+   В отчёте поясните, какие параметры могут быть установлены для работы этого модуля.
+
+   - disable_esco
+   - disable_ertm
+   - enable_ecred
+
+6. Выгрузите модуль ядра bluetooth:
+   modprobe -r bluetooth
+
+   ![14](image/14.png)
+
+## Обновление ядра системы
+
+1. Запустите терминал и получите полномочия администратора:
+   su -
+
+   ![15](image/15.png)
+
+2. Посмотрите версию ядра, используемую в операционной системе:
+   uname -r
+
+   ![16](image/16.png)
+
+3. Выведите на экран список пакетов, относящихся к ядру операционной системы:
+   dnf list kernel
+
+   ![17](image/17.png)
+
+4. Обновите систему, чтобы убедиться, что все существующие пакеты обновлены, так
+   как это важно при установке/обновлении ядер Linux и избежания конфликтов:
+   dnf upgrade --refresh
+
+   ![18](image/18.png)
+
+5. Обновите ядро операционной системы, а затем саму операционную систему:
+   dnf update kernel
+   dnf update
+   dnf upgrade --refresh
+
+   ![19](image/19.png)
+
+6. Перегрузите систему. При загрузке выберите новое ядро.
+
+   ![20](image/20.png)
+
+7. Посмотрите версию ядра, используемую в операционной системы:
+   uname -r
+   hostnamectl
+
+   ![21](image/21.png)
+
+# Контрольные вопросы
+
+1. Какая команда показывает текущую версию ядра, которая используется на вашей системе?
+   `uname -r` – выводит номер текущего ядра.
+2. Как можно посмотреть более подробную информацию о текущей версии ядра операционной системы?
+   `uname -a` – полная строка ядра (версия, дата сборки, архитектура).
+3. Какая команда показывает список загруженных модулей ядра?
+   `lsmod` – список загруженных модулей с их зависимостями и использованием.
+4. Какая команда позволяет вам определять параметры модуля ядра?
+   `modinfo <module>` – показывает поддерживаемые параметры (поле parm).
+5. Как выгрузить модуль ядра?
+   `modprobe -r <module>` – выгрузить модуль.
+6. Что вы можете сделать, если получите сообщение об ошибке при попытке выгрузить модуль ядра?
+   Остановите процессы/службы, которые его используют
+7. Как определить, какие параметры модуля ядра поддерживаются?
+   `modinfo <module>` → строка `parm:` перечисляет все параметры, их тип и значение по умолчанию.
+8. Как установить новую версию ядра?
+   `sudo dnf install kernel-<версия>` и перезагрузка
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки работы с утилитами управления модулями ядра операционной системы.
 
 # Список литературы{.unnumbered}
 
