--- a/labs/lab11/presentation/os2--lab11--presentation.qmd
+++ b/labs/lab11/presentation/os2--lab11--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Лабораторная работа № 11"
+subtitle: "Управление загрузкой системы"
 license: CC BY
-date: 1970-01-01
+date: 2025-10-15
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,185 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
+## Цель работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+Получить навыки работы с загрузчиком системы GRUB2.
 
-## Объект и предмет исследования
+## Задание
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+1. Продемонстрируйте навыки по изменению параметров GRUB и записи изменений в файл конфигурации (см. раздел 11.4.1).
+2. Продемонстрируйте навыки устранения неполадок при работе с GRUB (см. раздел 11.4.2).
+3. Продемонстрируйте навыки работы с GRUB без использования root (см. раздел 11.4.3).
 
-## Цели и задачи
+# Выполнение лабораторной работы
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Модификация параметров GRUB2
 
-## Материалы и методы
+## Запустите терминал и получите полномочия администратора:
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+su -
+![1](image/1.png)
 
-# Создание презентации
+## В файле /etc/default/grub установите параметр отображения меню загрузки в течение 10 секунд:
 
-## Процессор `pandoc`
+GRUB_TIMEOUT=10
+Сохраните изменения в файле и закройте редактор.
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+![2](image/2.png)
 
-## Формат `pdf`
+## Запишите изменения в GRUB2, введя в командной строке
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+grub2-mkconfig > /boot/grub2/grub.cfg
+или
+grub2-mkconfig -o /boot/grub2/grub.cfg
 
-## Код для формата `pdf`
+![3](image/3.png)
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+## Перезагрузите систему и убедитесь, что при загрузке вы видите прокрутку загрузочных сообщений.
 
-## Формат `html`
+Если вы не наблюдаете меню GRUB, то в файле /etc/default/grub удалите из строки указания параметров запуска ядра системы GRUB_CMDLINE_LINUX параметры rhgb и quiet, которые отвечают за показ графической заставки при запуске системы (для дистрибутивов, основанных на Red Hat), скрывая процесс загрузки от пользователя. Сохраните изменения в файле и закройте редактор. Запишите изменения в GRUB2.
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+##
 
-## Код для формата `html`
+![4](image/4.png)
 
-- Тема задаётся в файле `Makefile`
+##
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+![5](image/5.png)
 
-## Получающиеся форматы
+# Устранения неполадок
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+## Запустите (перегрузите) систему. Как только появится меню GRUB, выберите строку с текущей версией ядра в меню и нажмите e для редактирования.
 
-# Элементы презентации
+![6](image/6.png)
 
-## Актуальность
+## Прокрутите вниз до строки, начинающейся с linux ($root)/vmlinuz-. Эта строка загружает ядро системы. В конце этой строки введите systemd.unit=rescue.target и удалите опции rhgb и quit из этой строки, если они там есть.
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+![7](image/7.png)
 
-## Цели и задачи
+## Нажмите Ctrl + x для продолжения процесса загрузки.
 
-- Не формулируйте более 1--2 целей исследования
+![8](image/8.png)
 
-## Материалы и методы
+## Введите пароль пользователя root при появлении запроса.
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+![9](image/9.png)
 
-## Содержание исследования
+## Посмотрите список всех файлов модулей, которые загружены в настоящее время:
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+systemctl list-units
+Вы можете видеть, что загружена базовая системная среда.
 
-## Результаты
+![10](image/10.png)
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+## Посмотрите задействованные переменные среды оболочки:
 
+systemctl show-environment
 
-## Итоговый слайд
+![11](image/11.png)
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+## Перегрузите систему, используя команду
 
-# Рекомендую
+systemctl reboot
 
-## Принцип 10/20/30
+![12](image/12.png)
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+## Как только отобразится меню GRUB, ещё раз нажмите e на строке с текущей версией ядра, чтобы войти в режим редактора.
 
-## Связь слайдов
+В конце строки, загружающей ядро, введите systemd.unit=emergency.target и удалите опции rhgb и quit из этой строки, если они там есть.
 
-::: incremental
+![13](image/13.png)
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+## Нажмите Ctrl + x для продолжения процесса загрузки.
 
-:::
+![14](image/14.png)
 
-## Количество сущностей
+## Введите пароль пользователя root при появлении запроса.
 
-::: incremental
+![15](image/15.png)
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+## После успешного входа в систему посмотрите список всех загруженных файлов модулей:
 
-:::
+systemctl list-units
+Обратите внимание, что количество загружаемых файлов модулей уменьшилось до минимума.
 
-## Общие рекомендации
+![16](image/16.png)
 
-::: incremental
+## Перегрузите систему, используя команду:
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+systemctl reboot
 
-:::
+![17](image/17.png)
 
-## Представление данных
+# Сброс пароля root
 
-::: incremental
+## Запустите (перегрузите) компьютер. Когда отобразится меню GRUB, выберите в меню строку с текущей версией ядра системы и нажмите e , чтобы войти в режим редактора. В конце строки, загружающей ядро, введите
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+rd.break
+и удалите опции rhgb и quit из этой строки, если они там есть.
 
-:::
+![18](image/18.png)
+
+## Нажмите Ctrl + x для продолжения процесса загрузки.
+
+![19](image/19.png)
+
+## Этап загрузки системы остановится в момент загрузки initramfs, непосредственно перед монтированием корневой файловой системы в каталоге /.
+
+![20](image/20.png)
+
+## Чтобы получить доступ к системному образу для чтения и записи, наберите
+
+mount -o remount,rw /sysroot
+
+![21](image/21.png)
+
+## Сделайте содержимое каталога /sysimage новым корневым каталогом, набрав
+
+chroot /sysroot
+
+![22](image/22.png)
+
+## Теперь вы можете ввести команду задания пароля:
+
+passwd
+и установить новый пароль для пользователя root.
+
+![23](image/23.png)
+
+## Поскольку на этом очень раннем этапе загрузки SELinux ещё не активирован, то тип контекста SELinux для файла /etc/shadow будет испорчен.
+
+Если вы перезагрузитесь в этот момент, то никто не сможет войти в систему. Поэтому вы должны убедиться, что тип контекста установлен правильно. Чтобы сделать это, на этом этапе вы должны загрузить политику SELinux с помощью команды
+
+load_policy -i
+
+##
+
+![24](image/24.png)
+
+## Теперь вы можете вручную установить правильный тип контекста для /etc/shadow.
+
+Для этого введите
+chcon -t shadow_t /etc/shadow
+
+![25](image/25.png)
+
+## Перезагрузите систему с помощью команды reboot -f и войдите в систему с изменённым паролем для пользователя root.
+
+Опция -f (--force) означает принудительную немедленную остановку, выключение или перезагрузку. При указании один раз это приводит к немедленному, но чистому завершению работы системным менеджером. Если указано дважды, это приводит к немедленному завершению работы без обращения к системному менеджеру.
+
+##
+
+![26](image/26.png)
+
+## Выводы
+
+Я получил навыки работы с загрузчиком системы GRUB2.
