--- a/labs/lab11/report/os2--lab11--report.qmd
+++ b/labs/lab11/report/os2--lab11--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа № 11"
+subtitle: "Управление загрузкой системы"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,163 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить навыки работы с загрузчиком системы GRUB2.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Продемонстрируйте навыки по изменению параметров GRUB и записи изменений в файл конфигурации (см. раздел 11.4.1).
+2. Продемонстрируйте навыки устранения неполадок при работе с GRUB (см. раздел 11.4.2).
+3. Продемонстрируйте навыки работы с GRUB без использования root (см. раздел 11.4.3).
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Модификация параметров GRUB2
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. Запустите терминал и получите полномочия администратора:
+   su -
+
+   ![1](image/1.png)
+
+2. В файле /etc/default/grub установите параметр отображения меню загрузки в течение 10 секунд:
+   GRUB_TIMEOUT=10
+   Сохраните изменения в файле и закройте редактор.
+
+   ![2](image/2.png)
+
+3. Запишите изменения в GRUB2, введя в командной строке
+   grub2-mkconfig > /boot/grub2/grub.cfg
+   или
+   grub2-mkconfig -o /boot/grub2/grub.cfg
+
+   ![3](image/3.png)
+
+4. Перезагрузите систему и убедитесь, что при загрузке вы видите прокрутку загрузочных сообщений. Если вы не наблюдаете меню GRUB, то в файле /etc/default/grub удалите из строки указания параметров запуска ядра системы GRUB_CMDLINE_LINUX параметры rhgb и quiet, которые отвечают за показ графической заставки при запуске системы (для дистрибутивов, основанных на Red Hat), скрывая процесс загрузки от пользователя. Сохраните изменения в файле и закройте редактор. Запишите изменения в GRUB2.
+
+   ![4](image/4.png)
+
+   ![5](image/5.png)
+
+## Устранения неполадок
+
+1. Запустите (перегрузите) систему. Как только появится меню GRUB, выберите строку с текущей версией ядра в меню и нажмите e для редактирования.
+
+   ![6](image/6.png)
+
+2. Прокрутите вниз до строки, начинающейся с linux ($root)/vmlinuz-. Эта строка загружает ядро системы. В конце этой строки введите systemd.unit=rescue.target и удалите опции rhgb и quit из этой строки, если они там есть.
+
+   ![7](image/7.png)
+
+3. Нажмите Ctrl + x для продолжения процесса загрузки.
+
+   ![8](image/8.png)
+
+4. Введите пароль пользователя root при появлении запроса.
+
+   ![9](image/9.png)
+
+5. Посмотрите список всех файлов модулей, которые загружены в настоящее время:
+   systemctl list-units
+   Вы можете видеть, что загружена базовая системная среда.
+
+   ![10](image/10.png)
+
+6. Посмотрите задействованные переменные среды оболочки:
+   systemctl show-environment
+
+   ![11](image/11.png)
+
+7. Перегрузите систему, используя команду
+   systemctl reboot
+
+   ![12](image/12.png)
+
+8. Как только отобразится меню GRUB, ещё раз нажмите e на строке с текущей версией ядра, чтобы войти в режим редактора. В конце строки, загружающей ядро, введите systemd.unit=emergency.target и удалите опции rhgb и quit из этой строки, если они там есть.
+
+   ![13](image/13.png)
+
+9. Нажмите Ctrl + x для продолжения процесса загрузки.
+
+   ![14](image/14.png)
+
+10. Введите пароль пользователя root при появлении запроса.
+
+    ![15](image/15.png)
+
+11. После успешного входа в систему посмотрите список всех загруженных файлов модулей:
+    systemctl list-units
+    Обратите внимание, что количество загружаемых файлов модулей уменьшилось до минимума.
+
+    ![16](image/16.png)
+
+12. Перегрузите систему, используя команду:
+    systemctl reboot
+
+    ![17](image/17.png)
+
+## Сброс пароля root
+
+1. Запустите (перегрузите) компьютер. Когда отобразится меню GRUB, выберите в меню строку с текущей версией ядра системы и нажмите e , чтобы войти в режим редактора. В конце строки, загружающей ядро, введите
+   rd.break
+   и удалите опции rhgb и quit из этой строки, если они там есть.
+
+   ![18](image/18.png)
+
+2. Нажмите Ctrl + x для продолжения процесса загрузки.
+
+   ![19](image/19.png)
+
+3. Этап загрузки системы остановится в момент загрузки initramfs, непосредственно перед монтированием корневой файловой системы в каталоге /.
+
+   ![20](image/20.png)
+
+4. Чтобы получить доступ к системному образу для чтения и записи, наберите
+   mount -o remount,rw /sysroot
+
+   ![21](image/21.png)
+
+5. Сделайте содержимое каталога /sysimage новым корневым каталогом, набрав
+   chroot /sysroot
+
+   ![22](image/22.png)
+
+6. Теперь вы можете ввести команду задания пароля:
+   passwd
+   и установить новый пароль для пользователя root.
+
+   ![23](image/23.png)
+
+7. Поскольку на этом очень раннем этапе загрузки SELinux ещё не активирован, то тип контекста SELinux для файла /etc/shadow будет испорчен. Если вы перезагрузитесь в этот момент, то никто не сможет войти в систему. Поэтому вы должны убедиться, что тип контекста установлен правильно. Чтобы сделать это, на этом этапе вы должны загрузить политику SELinux с помощью команды
+   load_policy -i
+
+   ![24](image/24.png)
+
+8. Теперь вы можете вручную установить правильный тип контекста для /etc/shadow.
+   Для этого введите
+   chcon -t shadow_t /etc/shadow
+
+   ![25](image/25.png)
+
+9. Перезагрузите систему с помощью команды reboot -f и войдите в систему с изменённым паролем для пользователя root. Опция -f (--force) означает принудительную немедленную остановку, выключение или перезагрузку. При указании один раз это приводит к немедленному, но чистому завершению работы системным менеджером. Если указано дважды, это приводит к немедленному завершению работы без обращения к системному менеджеру.
+
+   ![26](image/26.png)
+
+# Контрольные вопросы
+
+1. Какой файл конфигурации следует изменить для применения общих изменений в GRUB2?
+
+- /etc/default/grub
+
+2. Как называется конфигурационный файл GRUB2, в котором вы применяете изменения для GRUB2?
+
+- /etc/default/grub — основной файл конфигурации GRUB2, в котором вносятся изменения.
+
+3. После внесения изменений в конфигурацию GRUB2, какую команду вы должны выполнить, чтобы изменения сохранились и воспринялись при загрузке системы?
+
+- Выполнить sudo grub-mkconfig -o /boot/grub/grub.cfg.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки работы с загрузчиком системы GRUB2.
 
 # Список литературы{.unnumbered}
 
